--- a/code/public/index.html
+++ b/code/public/index.html
@@ -14,7 +14,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>Happy thoughts by Nyblad</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Inconsolata&display=swap" rel="stylesheet">
 </head>
 
 <body>
