--- a/code/public/index.html
+++ b/code/public/index.html
@@ -14,6 +14,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <link href="https://fonts.googleapis.com/css?family=Inconsolata&display=swap" rel="stylesheet">
+  <link href="./Menlo-Regular.ttf" rel="stylesheet">
   <title>Technigo React App</title>
 </head>
 
