--- a/code/public/index.html
+++ b/code/public/index.html
@@ -16,6 +16,7 @@
       href="https://fonts.googleapis.com/css?family=Inconsolata&display=swap"
       rel="stylesheet"
     />
+    <link href="./Menlo-Regular.ttf" rel="stylesheet" />
     <title>Technigo React App</title>
   </head>
 
