--- a/code/public/index.html
+++ b/code/public/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./src/index.css"
+
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
