--- a/code/public/index.html
+++ b/code/public/index.html
@@ -5,8 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./src/index.css"
-
+    <link rel="stylesheet" href="./src/index.css">
     <title>Happy thoughts</title>
   </head>
 
