--- a/code/public/index.html
+++ b/code/public/index.html
@@ -29,6 +29,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+  <footer>
+    <p>A Technigo Bootcamp Project by Hanna Rüter March 2020</p>
+  </footer>
 </body>
 
 </html>
