--- a/code/public/index.html
+++ b/code/public/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
   <link rel="icon" href="%PUBLIC_URL%/2764.svg">
-  <meta property="og:url" content="" />
+  <meta property="og:url" content="https://fridamaria-happy-thoughts.netlify.com/" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Happy Thoughts" />
   <meta property="og:description" content="Posting and displaying happy thoughts with React" />
