--- a/code/public/index.html
+++ b/code/public/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro&display=swap" rel="stylesheet">
-  <title>Technigo React App</title>
+  <title>Happy Thoughts Tweets</title>
 </head>
 
 <body>
