--- a/code/public/index.html
+++ b/code/public/index.html
@@ -14,7 +14,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Technigo React App</title>
+  <link rel="icon" href="assets/heart.png" type="image/png" sizes="16x16">
+
+  <title>Project 11 - Happy thoughts</title>
 </head>
 
 <body>
