--- a/code/public/index.html
+++ b/code/public/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700&display=swap&subset=latin-ext,vietnamese"
   rel="stylesheet">
+<link
+  href="https://fonts.googleapis.com/css?family=Pacifico|Spicy+Rice&display=swap&subset=cyrillic,cyrillic-ext,latin-ext,vietnamese"
+  rel="stylesheet">
 
 <head>
   <meta charset="utf-8" />
