--- a/code/public/index.html
+++ b/code/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Limelight&display=swap" rel="stylesheet">
   <link rel="icon" href="%PUBLIC_URL%/2764.svg">
   <meta property="og:url" content="https://fridamaria-happy-thoughts.netlify.com/" />
   <meta property="og:type" content="website" />
