--- a/code/public/index.html
+++ b/code/public/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,500&display=swap" rel="stylesheet">
+  <link rel="icon" href="favicon.svg">
   <title>Happy Thoughts</title>
 </head>
 
