--- a/code/public/index.html
+++ b/code/public/index.html
@@ -15,7 +15,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <link rel="icon" href="assets/heart.png" type="image/png" sizes="16x16">
-  <title>Project 11 - Happy thoughts</title>
+  <title>Happy thoughts - Anna G</title>
 </head>
 
 <body>
