--- a/code/public/index.html
+++ b/code/public/index.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Ubuntu+Mono&display=swap" rel="stylesheet">
+    <link rel="icon" 
+      type="image/png" 
+      href="./images/heart.png">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -14,7 +17,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Technigo React App</title>
+    <title>Happy thoughts!</title>
   </head>
 
   <body>
