--- a/code/public/index.html
+++ b/code/public/index.html
@@ -4,6 +4,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="happy thoughts">
+    <meta name="keywords" content=" happy thoughts, Frontend, Web design, Developer">
+    <meta name="author" content="Moa Hammarbäck">
+
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
