--- a/code/public/index.html
+++ b/code/public/index.html
@@ -13,7 +13,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Happy thoughts</title>
+    <title>Happy Thoughts</title>
+    <link rel="icon" class="favicon" type="image/jpg" href="">
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&display=swap" rel="stylesheet">
   </head>
 
   <body>
