--- a/code/public/index.html
+++ b/code/public/index.html
@@ -3,6 +3,24 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta
+			name="description"
+			content="Twitter-like app, Technigo students can share their positive energy, created with React."
+		/>
+		<meta
+			property="og:description"
+			content="App where Technigo students can share their positiv energy! Created with React"
+		/>
+		<meta
+			property="og:image"
+			content="https://images.unsplash.com/photo-1459369510627-9efbee1e6051?ixlib=rb-1.2.1&auto=format&fit=crop&w=2250&q=80"
+		/>
+		<meta property="og:author" content="Therese Lindén" />
+		<meta
+			property="og:url"
+			content="happy-thoughts-therese-linden.netlify.app"
+		/>
+		<link rel="favicon" href="./assets/favicon.png" type="favicon" />
 		<!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -12,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-		<title>Technigo React App</title>
+		<title>Happy thoughts</title>
 	</head>
 
 	<body>
