--- a/code/public/index.html
+++ b/code/public/index.html
@@ -7,6 +7,9 @@
 			name="description"
 			content="Twitter-like app, Technigo students can share their positive energy, created with React."
 		/>
+		<meta name="keywords" content="app, React" />
+		<meta name="author" content="Therese Lindén" />
+		<meta property="og:title" content="Remain happy" />
 		<meta
 			property="og:description"
 			content="App where Technigo students can share their positiv energy! Created with React"
@@ -15,12 +18,11 @@
 			property="og:image"
 			content="https://images.unsplash.com/photo-1459369510627-9efbee1e6051?ixlib=rb-1.2.1&auto=format&fit=crop&w=2250&q=80"
 		/>
-		<meta property="og:author" content="Therese Lindén" />
 		<meta
 			property="og:url"
 			content="happy-thoughts-therese-linden.netlify.app"
 		/>
-		<link rel="favicon" href="./assets/favicon.png" type="favicon" />
+		<link rel="icon" href="./assets/favicon.png" type="image/png" />
 		<!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
