--- a/code/public/index.html
+++ b/code/public/index.html
@@ -4,6 +4,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap&family=Capriola&display=swap" rel="stylesheet">
+    
+    <link rel="icon" 
+      type="image/png" 
+      href="./images/icons8-love-letter-48.png">
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -18,7 +24,11 @@
 
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <!-- <video className="video-background" autoplay muted loop>
+      <source src="./images/happy.mp4" type="video/mp4">
+      Your browser does not support HTML5 video.
+    </video> -->
+    <div class="root" id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
