Updated favicon, meta description, centered content and tabIndexes

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -4,13 +4,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="/code/assets/favicon.ico" type="image/ico"/>
+    <meta name="Happy Thoughts" content="Only Happy Thoughts posted here">
+    <link rel="icon" href="./assets/favicon.ico" type="image/ico"/>
     <title>Happy Thoughts Only</title>
   </head>
 
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" class="main-div"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
