--- a/code/public/index.html
+++ b/code/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta property="og:title" content="Happiness is meant to be shared">
     <meta property="og:description" content="What makes you happy today?">
-    <meta property="og:image" width="640" height="426" content="https://thinkhappylivehappy.netlify.app/image/og-image.jpg">
+    <meta property="og:image" width="640" height="426" content="https://thinkhappylivehappy.netlify.app/images/og-image.jpg">
     <meta property="og:url" content="https://thinkhappylivehappy.netlify.app/">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap&family=Capriola&display=swap" rel="stylesheet">
     
