updated meta tags and readme.file

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -4,7 +4,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Happy thoughts App">
+    <meta property="og:image" content="https://silly-carson-4bd53e.netlify.app/pixel_heart.png">
+    <meta name="description" content="Share some happy thoughs, 2020 needs it badly">
     <meta name="keywords" content="Happy, thoughts, app, API">
     <meta name="author" content="Johanna Blom">
     <!--
