--- a/code/public/index.html
+++ b/code/public/index.html
@@ -5,20 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta property="og:description" content="Happy Twitter"/>
     <meta property="og:image"
-    content="https://images.unsplash.com/photo-1517607648415-b431854daa86?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1492&q=80"
-    />
+    content="https://images.unsplash.com/photo-1517607648415-b431854daa86?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1492&q=80" />
     <meta property="og:author" content="Andrea Osmar" />
     <meta
       property="og:url"
-      content="xx"
-    />
-
-
+      content="give-me-some-love.netlify.app" />
     <link rel="icon" type="image/png" href="/favicon.png" alt="favicon" />
-    
     <title>Give Me Some Love</title>
   </head>
-
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
