--- a/code/public/index.html
+++ b/code/public/index.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Technigo React App</title>
+    <meta
+      name="description"
+      content="Happy thought app - We at Technigo can give each other energy by posting a Happy thought"
+    />
+    <meta name="keywords" content="React, useState, UseEffect" />
+    <meta name="author" content="Ylva Nilsson" />
+    <meta property="og:title" content="Let's be happy!" />
+    <meta
+      property="og:description"
+      content="Wanna share some energy - Send a happy thought"
+    />
+    <meta
+      property="og:image"
+      content="https://images.unsplash.com/photo-1464692805480-a69dfaafdb0d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"
+    />
+    <meta
+      property="og:url"
+      content="https://awesome-mcclintock-31dad3.netlify.app/"
+    />
+    <link
+      rel="icon"
+      href="./images/icons8-smiling-face-with-heart-48.png"
+      type="image/png"
+    />
+    <title>Let's be happy</title>
   </head>
 
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
-
 </html>
