--- a/code/public/index.html
+++ b/code/public/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
     <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
