--- a/code/public/index.html
+++ b/code/public/index.html
@@ -14,7 +14,11 @@
     href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
     rel="stylesheet">
 
-  <title>Technigo React App</title>
+  <!-- favicon -->
+
+  <link rel="icon" href="./favicon.png" type="image/gif" sizes="16x16">
+
+  <title>Happy Thoughts</title>
 </head>
 
 <body>
