--- a/code/public/index.html
+++ b/code/public/index.html
@@ -1,34 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Technigo React App</title>
+    <meta name="description" content="The most excellent survey" />
+    <meta name="keywords" content="survey, excellent, react" />
+    <meta name="author" content="Sara Heijkenskjöld" />
+    <meta property="og:title" content="The excellent survey" />
+    <meta
+      property="og:description"
+      content="Twitter like app to send happy thought, built with React"
+    />
+    <!-- <meta
+      property="og:image"
+      content="https://excellent.netlify.app/assets/og-img.png"
+    /> -->
+    <!-- <meta property="og:url" content="https://excellent.netlify.app/" /> -->
+    <link
+      rel="shortcut icon"
+      href="./assets/love-letter16x16.png"
+      type="image/x-icon"
+    />
+    <title>Happy Thoughts</title>
   </head>
 
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
-
 </html>
