--- a/code/public/index.html
+++ b/code/public/index.html
@@ -11,11 +11,14 @@
       property="og:description"
       content="Twitter like app to send happy thought, built with React"
     />
-    <!-- <meta
+    <meta
       property="og:image"
-      content="https://excellent.netlify.app/assets/og-img.png"
-    /> -->
-    <!-- <meta property="og:url" content="https://excellent.netlify.app/" /> -->
+      content="https://determined-panini-dccc7a.netlify.app//assets/og-img.png"
+    />
+    <meta
+      property="og:url"
+      content="https://determined-panini-dccc7a.netlify.app/"
+    />
     <link
       rel="shortcut icon"
       href="./assets/love-letter16x16.png"
