Added meta tags

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="The most excellent survey" />
-    <meta name="keywords" content="survey, excellent, react" />
+    <meta name="description" content="Happy thoughts app" />
+    <meta name="keywords" content="Happy thought, post thoughts" />
     <meta name="author" content="Sara Heijkenskjöld" />
-    <meta property="og:title" content="The excellent survey" />
+    <meta property="og:title" content="Happy Thoughts" />
     <meta
       property="og:description"
       content="Twitter like app to send happy thought, built with React"
