Added meta tags

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -13,7 +13,7 @@
     />
     <meta
       property="og:image"
-      content="https://determined-panini-dccc7a.netlify.app//assets/og-img.png"
+      content="https://determined-panini-dccc7a.netlify.app/assets/og-img.png"
     />
     <meta
       property="og:url"
