Added meta tags

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -4,16 +4,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Happy thoughts app" />
-    <meta name="keywords" content="Happy thought, post thoughts" />
+    <meta name="keywords" content="Happy thoughts, post thoughts" />
     <meta name="author" content="Sara Heijkenskjöld" />
     <meta property="og:title" content="Happy Thoughts" />
     <meta
       property="og:description"
-      content="Twitter like app to send happy thought, built with React"
+      content="Twitter like app to send happy thoughts, built with React"
     />
     <meta
       property="og:image"
-      content="https://determined-panini-dccc7a.netlify.app/assets/og-img.png"
+      content="https://determined-panini-dccc7a.netlify.app/assets/og-image.png"
     />
     <meta
       property="og:url"
