--- a/code/public/index.html
+++ b/code/public/index.html
@@ -9,10 +9,7 @@
     <meta property="og:image" width="640" height="426" content="https://thinkhappylivehappy.netlify.app/images/og-image.jpg">
     <meta property="og:url" content="https://thinkhappylivehappy.netlify.app/">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&family=Source+Sans+Pro:wght@300&family=Capriola&display=swap" rel="stylesheet">
-    
-    <link rel="icon" 
-      type="image/png" 
-      href="./images/icons8-love-letter-48.png">
+    <link rel="icon" type="image/png" href="./images/icons8-love-letter-48.png">
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -28,10 +25,6 @@
 
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <!-- <video className="video-background" autoplay muted loop>
-      <source src="./images/happy.mp4" type="video/mp4">
-      Your browser does not support HTML5 video.
-    </video> -->
     <div class="root" id="root"></div>
     <!--
       This HTML file is a template.
