--- a/code/public/index.html
+++ b/code/public/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0" />
-    <link rel="shortcut icon" type="image/jpg" href="../src/assets/favicon.png"/>
+    <link rel="shortcut icon" type="image/jpg" href="./favicon.ico"/>
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
