added some final css

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -16,6 +16,8 @@
     <title>Happy Thoughts</title>
     <link rel="icon" class="favicon" type="image/jpg" href="">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&display=swap" rel="stylesheet">
+    <link rel="icon" class="favicon" type="image/jpg" href="./emoji.png">
+
   </head>
 
   <body>
