--- a/code/public/index.html
+++ b/code/public/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -14,10 +13,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Happy Thoughts</title>
-    <link rel="icon" class="favicon" type="image/jpg" href="">
-    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&display=swap" rel="stylesheet">
-    <link rel="icon" class="favicon" type="image/jpg" href="./emoji.png">
-
+    <link rel="icon" class="favicon" type="image/jpg" href="" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="icon" class="favicon" type="image/jpg" href="./emoji.png" />
   </head>
 
   <body>
@@ -34,5 +35,4 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
-
 </html>
