--- a/code/public/index.html
+++ b/code/public/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Send Happy Thoughts" />
     <meta name="keywords" content="happy, thoughts, react" />
     <meta name="author" content="Jamie Cook" />
+    <meta property="og:image" content="https://think-happy-thoughts.netlify.app/happy-thoughts.jpg" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
