--- a/code/public/index.html
+++ b/code/public/index.html
@@ -4,6 +4,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Happy thoughts twitter">
+    <meta name="keywords" content="Happy thoughts, fun, share love">
+    <meta name="author" content="Marjaana Tienaho">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   
