--- a/code/public/index.html
+++ b/code/public/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="A page for happy thoughts created with React by Petra Almgren as a project during the Technigo Bootcamp 2020."
+    />
     <link rel="shortcut icon" type="image/x-icon" href="./img/favicon.ico" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
