--- a/code/public/index.html
+++ b/code/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400;500&family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
-    <title>Technigo React App</title>
+    <title>Happy Thoughts!</title>
   </head>
 
   <body>
