Updated after Henrike's feedback

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -14,7 +14,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>Happy tweets</title>
-  <link rel="shortcut icon" href="./icons/beating-heart.ico">
+  <link rel="shortcut icon" href="%PUBLIC_URL%/icons/beating-heart.ico">
 </head>
 
 <body>
