changed after codereview

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -9,6 +9,7 @@
   <meta property="og:title" content="Happy Thoughts Project">
   <meta property="og:description" content="Feeling bad? Pick yourself up with these thoughts! Feeling happy? Post and let the world know!">
   <meta property="og:image" content="./preview.jpg">
+  <meta name="keywords" content="app, React, Happy, Thoughts">
   <title>Happy Thoughts project</title>
 </head>
 
