--- a/code/public/index.html
+++ b/code/public/index.html
@@ -14,6 +14,10 @@
     <title>Give Me Some Love</title>
   </head>
   <body>
+  <video autoplay muted loop class="myVideo">
+  <source src="Hearts.mp4" type="video/mp4">
+  Your browser does not support HTML5 video.
+  </video>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
