background does not work on iphone, tying to fix

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -14,11 +14,16 @@
     <title>Give Me Some Love</title>
   </head>
   <body>
-  <video autoplay muted loop class="myVideo">
+
+  <video class="myVideo" loop autoplay muted loop playsinline="true" disablePictureInPicture="true">
   <source src="Hearts.mp4" type="video/mp4">
   Your browser does not support HTML5 video.
+
   </video>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
+
+
+
