Changed animation, and some other small styling

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -13,7 +13,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Technigo React App</title>
+    <script src="https://kit.fontawesome.com/37c653cfef.js" crossorigin="anonymous"></script>
+    <title>Jessikas Happy Thoughts</title>
   </head>
 
   <body>
