Amout of likes is now fixed

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -19,7 +19,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>💌 Happy Thoughts</title>
+    <title>Happy Thoughts</title>
   </head>
 
   <body>
