--- a/code/public/index.html
+++ b/code/public/index.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Trispace:wght@100;200;300&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="./favicon/heart.png">
+
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
