--- a/code/public/index.html
+++ b/code/public/index.html
@@ -13,7 +13,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>No Bad Thoughts Inc.</title>
+    <title>No Bad Thoughts Inc. - Just feel good! </title>
   </head>
 
   <body>
