--- a/code/public/index.html
+++ b/code/public/index.html
@@ -15,7 +15,7 @@
     -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
-    <title>Technigo React App</title>
+    <title>Happy Thoughts</title>
   </head>
 
   <body>
