completed thoughtform and added an emoji component

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="https://cdn-icons.flaticon.com/png/512/210/premium/210545.png?token=exp=1635340410~hmac=2d5955f9c20f356e76e2bf3904a0e168" type="image"/>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -13,7 +14,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Technigo React App</title>
+    <title>Happy Thoughts!</title>
   </head>
 
   <body>
