--- a/code/public/index.html
+++ b/code/public/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="https://cdn-icons.flaticon.com/png/512/210/premium/210545.png?token=exp=1635340410~hmac=2d5955f9c20f356e76e2bf3904a0e168" type="image"/>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
