--- a/code/public/index.html
+++ b/code/public/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta property="og:title" content="Julia Nikitina's happy thoughts">
   <meta property="og:description" content="Send your happy thoughts">
-  <meta property="og:image" content="https://i.ibb.co/kxjRJL5/happy-thoughts.png">
+  <meta property="og:image" content="https://i.ibb.co/j8KqGWT/happy.png">
   <meta property="og:url" content="https://my-happy-happy-thoughts.netlify.app/">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="og:site_name" content="Julia Nikitina's happy thoughts">
