--- a/code/public/index.html
+++ b/code/public/index.html
@@ -10,6 +10,43 @@
       rel="stylesheet"
     />
     <title>Happy Thoughts</title>
+    <meta
+      name="description"
+      content="Simple website where we can share Happy thoughts. Built in React and using API. "
+    />
+
+    <!-- Facebook Meta Tags -->
+    <meta
+      property="og:url"
+      content="https://happythoughts-katie.netlify.app/"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Happy Thoughts" />
+    <meta
+      property="og:description"
+      content="Simple website where we can share Happy thoughts. Built in React and using API. "
+    />
+    <meta
+      property="og:image"
+      content="https://happythoughts-katie.netlify.app/assets/og.png"
+    />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="happythoughts-katie.netlify.app" />
+    <meta
+      property="twitter:url"
+      content="https://happythoughts-katie.netlify.app/"
+    />
+    <meta name="twitter:title" content="Happy Thoughts" />
+    <meta
+      name="twitter:description"
+      content="Simple website where we can share Happy thoughts. Built in React and using API. "
+    />
+    <meta
+      name="twitter:image"
+      content="https://happythoughts-katie.netlify.app/assets/og.png"
+    />
   </head>
 
   <body>
