--- a/code/public/index.html
+++ b/code/public/index.html
@@ -1,17 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-  
-    <title>Technigo React App</title>
+
+    <!-- HTML Meta Tags -->
+    <title>Technigo Happy thoughts app</title>
+    <meta
+      name="description"
+      content="You feeling happy? Share your thoughts in the community!"
+    />
+
+    <!-- Facebook Meta Tags -->
+    <meta
+      property="og:url"
+      content="https://happy-thoughts-ajliin.netlify.app/"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Technigo Happy thoughts app" />
+    <meta
+      property="og:description"
+      content="You feeling happy? Share your thoughts in the community!"
+    />
+    <meta
+      property="og:image"
+      content="https://happy-thoughts-ajliin.netlify.app/img/happy-thoughtspng"
+    />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:domain"
+      content="happy-thoughts-ajliin.netlify.app"
+    />
+    <meta
+      property="twitter:url"
+      content="https://happy-thoughts-ajliin.netlify.app/"
+    />
+    <meta name="twitter:title" content="Technigo Happy thoughts app" />
+    <meta
+      name="twitter:description"
+      content="You feeling happy? Share your thoughts in the community!"
+    />
+    <meta
+      name="twitter:image"
+      content="https://happy-thoughts-ajliin.netlify.app/img/happy-thoughtspng"
+    />
   </head>
 
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-
   </body>
-
 </html>
