updated img-tag in og

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -24,7 +24,7 @@
     />
     <meta
       property="og:image"
-      content="https://happy-thoughts-ajliin.netlify.app/img/happy-thoughtspng"
+      content="https://happy-thoughts-ajliin.netlify.app/img/happy-thoughts.png"
     />
 
     <!-- Twitter Meta Tags -->
@@ -44,7 +44,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://happy-thoughts-ajliin.netlify.app/img/happy-thoughtspng"
+      content="https://happy-thoughts-ajliin.netlify.app/img/happy-thoughts.png"
     />
   </head>
 
