update counter to - letter

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -46,6 +46,8 @@
       name="twitter:image"
       content="https://happy-thoughts-ajliin.netlify.app/img/happy-thoughts.png"
     />
+
+    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
   </head>
 
   <body>
