styling of boxed and button

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -14,6 +14,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Technigo React App</title>
+    <!-- <link href=“//db.onlinewebfonts.com/c/3c607a384582ce9e879008881a86351c?family=PrimaSans+BT” rel=“stylesheet”
+      type=“text/css” /> -->
   </head>
 
   <body>
