--- a/code/public/index.html
+++ b/code/public/index.html
@@ -10,7 +10,10 @@
       content="https://share-some-happiness.netlify.app/"
     />
     <!-- add image link! -->
-    <meta property="og:image" content="" />
+    <meta
+      property="og:image"
+      content="https://share-some-happiness.netlify.app/assets/og-img.jpg"
+    />
     <meta
       property="og:description"
       content="App where you can share you happiness, and see what makes other happy!"
