minor change added

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -12,7 +12,7 @@
     <!-- add image link! -->
     <meta
       property="og:image"
-      content="https://share-some-happiness.netlify.app/assets/og-img.jpg"
+      content="https://share-some-happiness.netlify.app/assets/og-image.jpg"
     />
     <meta
       property="og:description"
