cleanup and update README

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -12,7 +12,7 @@
     <title>Happy Thoughts</title>
     <meta
       name="description"
-      content="Simple website where we can share Happy thoughts. Built in React and using API. "
+      content="Simple website where we can post Happy thoughts. Built in React using API. "
     />
 
     <!-- Facebook Meta Tags -->
@@ -24,7 +24,7 @@
     <meta property="og:title" content="Happy Thoughts" />
     <meta
       property="og:description"
-      content="Simple website where we can share Happy thoughts. Built in React and using API. "
+      content="Simple website where we can post Happy thoughts. Built in React using API. "
     />
     <meta
       property="og:image"
@@ -41,7 +41,7 @@
     <meta name="twitter:title" content="Happy Thoughts" />
     <meta
       name="twitter:description"
-      content="Simple website where we can share Happy thoughts. Built in React and using API. "
+      content="Simple website where we can post Happy thoughts. Built in React using API. "
     />
     <meta
       name="twitter:image"
