--- a/code/public/index.html
+++ b/code/public/index.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Technigos front-end developer bootcamp">
     <meta property="og:description" content="Happy thoughts app">
-    <meta property="og:image" content="mattssons-happythoughts.netlify.app./image/og-photo.png">
+    <meta property="og:image" content="https://i.ibb.co/SVf8spC/og-img.png">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
@@ -20,7 +20,7 @@
     <meta property="twitter:url" content="mattssons-happythoughts.netlify.app">
     <meta name="twitter:title" content="Technigos front-end developer bootcamp">
     <meta name="twitter:description" content="Happy thoughts app">
-    <meta name="twitter:image" content="mattssons-happythoughts.netlify.app./image/og-photo.png">
+    <meta name="twitter:image" content="https://i.ibb.co/SVf8spC/og-img.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="./style.css"> 
