readme and header done

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -12,8 +12,8 @@
     <meta property="og:image" content="https://aspen-dailystandup.netlify.app/images/happy-thought-og.jpg" />
 
     <title>Technigo Happy Thought</title>
-    <link href="//db.onlinewebfonts.com/c/3c607a384582ce9e879008881a86351c?family=PrimaSans+BT" rel="stylesheet"
-      type="text/css" />
+    <!-- <link href="//db.onlinewebfonts.com/c/3c607a384582ce9e879008881a86351c?family=PrimaSans+BT" rel="stylesheet"
+      type="text/css" /> -->
   </head>
 
   <body>
