--- a/code/public/index.html
+++ b/code/public/index.html
@@ -13,6 +13,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <meta property="og:title" content="Happy thoughts!">
+    <meta property="og:description" content="Your new happy place on the internet.">
+    <meta property="og:url" content="https://happy-thoughts-maria-petersson.netlify.app/">
     <title>Happy Thoughts!</title>
     
   </head>
