og img and redid  h1

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -16,6 +16,7 @@
 
     <meta property="og:title" content="Happy thoughts!">
     <meta property="og:description" content="Your new happy place on the internet.">
+    <meta property="og:image" content="./img/happy-thoughts_app.png">
     <meta property="og:url" content="https://happy-thoughts-maria-petersson.netlify.app/">
     <title>Happy Thoughts!</title>
     
