--- a/code/public/index.html
+++ b/code/public/index.html
@@ -15,9 +15,9 @@
     -->
 
     <meta property="og:title" content="Happy thoughts!">
-    <meta property="og:description" content="Your new happy place on the internet.">
-    <meta property="og:image" content="./img/happy-thoughts_app.png">
-    <meta property="og:url" content="https://happy-thoughts-maria-petersson.netlify.app/">
+    <meta property="og:description" content="Your new happy place on the internet. An app done bya a Technigo student, built with React.">
+    <meta property="og:url" content="#" />
+    <meta property="og:image" content="https://happy-thoughts-maria-petersson.netlify.app/img/happy-thoughts_app.png" />
     <title>Happy Thoughts!</title>
     
   </head>
