changed og tags

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -8,12 +8,11 @@
     <meta property="og:description"
       content="A happier version of twitter built in React. Collect Technigo students 'happy thoughts' using Fetch API." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="#" />
-    <meta property="og:image" content="https://aspen-dailystandup.netlify.app/images/happy-thought-og.jpg" />
+    <meta property="og:url" content="https://aspen-happy-thought.netlify.app/" />
+    <meta property="og:image" content="https://aspen-happy-thought.netlify.app/images/happy-thought-og.jpg" />
 
     <title>Technigo Happy Thought</title>
-    <!-- <link href="//db.onlinewebfonts.com/c/3c607a384582ce9e879008881a86351c?family=PrimaSans+BT" rel="stylesheet"
-      type="text/css" /> -->
+
   </head>
 
   <body>
