added styling for small phones and desktop + cleaned up and added comments

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -10,7 +10,9 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://aspen-happy-thought.netlify.app/" />
     <meta property="og:image" content="https://aspen-happy-thought.netlify.app/images/happy-thought-og.jpg" />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oxygen+Mono&display=swap" rel="stylesheet">
     <title>Technigo Happy Thought</title>
 
   </head>
