--- a/code/public/index.html
+++ b/code/public/index.html
@@ -16,6 +16,7 @@
 
     <meta property="og:title" content="Happy thoughts!">
     <meta property="og:description" content="Your new happy place on the internet. An app done by a Technigo student, built with React.">
+    <meta property="og:type" content="website" />
     <meta property="og:url" content="#" />
     <meta property="og:image" content="https://happy-thoughts-maria-petersson.netlify.app/img/happy-og.png" />
     <title>Happy Thoughts!</title>
