updated aria label

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -23,7 +23,7 @@
 		<meta property="og:description" content="Share your Happy Thoughts" />
 		<meta
 			property="og:image"
-			content="https://mt-dotse-happy-thoughts.netlify.app/images/og-img.jpg"
+			content="https://mt-dotse-happy-thoughts.netlify.app/assets/images/og-img.jpg"
 		/>
 
 		<!-- Twitter Meta Tags -->
@@ -43,7 +43,7 @@
 		<meta name="twitter:description" content="Share your happy thoughts" />
 		<meta
 			name="twitter:image"
-			content="https://mt-dotse-happy-thoughts.netlify.app/images/og-img.jpg"
+			content="https://mt-dotse-happy-thoughts.netlify.app/assets/images/og-img.jpg"
 		/>
 		<title>Happy Thoughts</title>
 	</head>
