added meta tags

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -9,6 +9,42 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap"
       rel="stylesheet"
     />
+    <!-- HTML Meta Tags -->
+    <title>Sofias happy thouhts</title>
+    <meta
+      name="description"
+      content="A website where you can send and read others happy thoughts"
+    />
+
+    <!-- Facebook Meta Tags -->
+    <meta
+      property="og:url"
+      content="https://happy-thoughts-sofia.netlify.app/"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Sofias happy thouhts" />
+    <meta
+      property="og:description"
+      content="A website where you can send and read others happy thoughts"
+    />
+    <meta property="og:image" content="https://postimg.cc/5XgYpzZn" />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:domain"
+      content="happy-thoughts-sofia.netlify.app"
+    />
+    <meta
+      property="twitter:url"
+      content="https://happy-thoughts-sofia.netlify.app/"
+    />
+    <meta name="twitter:title" content="Sofias happy thouhts" />
+    <meta
+      name="twitter:description"
+      content="A website where you can send and read others happy thoughts"
+    />
+    <meta name="twitter:image" content="https://postimg.cc/5XgYpzZn" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
