changed src to image

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -29,6 +29,29 @@
     />
     <meta property="og:image" content="https://postimg.cc/5XgYpzZn" />
 
+    <!-- HTML Meta Tags -->
+    <title>Sofias happy thouhts</title>
+    <meta
+      name="description"
+      content="A website where you can send and read others happy thoughts"
+    />
+
+    <!-- Facebook Meta Tags -->
+    <meta
+      property="og:url"
+      content="https://happy-thoughts-sofia.netlify.app/"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Sofias happy thouhts" />
+    <meta
+      property="og:description"
+      content="A website where you can send and read others happy thoughts"
+    />
+    <meta
+      property="og:image"
+      content="https://i.postimg.cc/6QJrWLzJ/happy-thoughts-sofia-netlify-app.png"
+    />
+
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta
@@ -44,7 +67,13 @@
       name="twitter:description"
       content="A website where you can send and read others happy thoughts"
     />
-    <meta name="twitter:image" content="https://postimg.cc/5XgYpzZn" />
+    <meta
+      name="twitter:image"
+      content="https://i.postimg.cc/6QJrWLzJ/happy-thoughts-sofia-netlify-app.png"
+    />
+
+    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
