udated meta tags

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -8,11 +8,7 @@
 			rel="stylesheet"
 		/>
 		<link rel="icon" href="../src/images/red-heart.png" />
-		<meta
-			name="description"
-			content="Try my survey out - Pick your horror movie"
-		/>
-
+		<meta name="description" content="Share your happy thoughts" />
 		<!-- Facebook Meta Tags -->
 		<meta
 			property="og:url"
@@ -23,7 +19,7 @@
 		<meta property="og:description" content="Share your Happy Thoughts" />
 		<meta
 			property="og:image"
-			content="https://mt-dotse-happy-thoughts.netlify.app/assets/images/og-img.jpg"
+			content="https://mt-dotse-happy-thoughts.netlify.app/assets/og-img.jpg"
 		/>
 
 		<!-- Twitter Meta Tags -->
@@ -43,7 +39,7 @@
 		<meta name="twitter:description" content="Share your happy thoughts" />
 		<meta
 			name="twitter:image"
-			content="https://mt-dotse-happy-thoughts.netlify.app/assets/images/og-img.jpg"
+			content="https://mt-dotse-happy-thoughts.netlify.app/assets/og-img.jpg"
 		/>
 		<title>Happy Thoughts</title>
 	</head>
