readme and og tags added

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -9,6 +9,30 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;0,700;1,400&display=swap"
       rel="stylesheet"
     />
+
+    <!--Meta tags for facebook & linked in-->
+    <meta property="og:title" content="Happy Thinking App" />
+    <meta
+      property="og:description"
+      content="Write a happy thought to brighten up your or someone else's day! This is a twitter-like app to make us learn useEffect hook."
+    />
+    <meta
+      property="og:image"
+      content="https://happy-thinking.netlify.app/images/twit-og-png-min.png"
+    />
+    <meta property="og:url" content="https://happy-thinking.netlify.app/" />
+
+    <!--Meta tags for twitter-->
+    <meta name="twitter:title" content="Happy Thinking App" />
+    <meta
+      name="twitter:description"
+      content="Write a happy thought to brighten up your or someone else's day! This is a twitter-like app to make us learn useEffect hook."
+    />
+    <meta
+      name="twitter:image"
+      content="https://happy-thinking.netlify.app/images/twit-og-png-min.png"
+    />
+    <meta name="twitter:card" content="Happy Thinking App" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -18,7 +42,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Technigo React App</title>
+    <title>Happy Thinking App</title>
   </head>
 
   <body>
