validation, text wrapper and footer added

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -14,6 +14,17 @@
     -->
     <title>Happy Thoughts</title>
     <link rel="icon" href="/heart.svg" />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <meta
+      property="og:url"
+      content="https://happy-thoughts-pinar.netlify.app/"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="React App - Happy Thoughts" />
   </head>
 
   <body>
