Fixed the character limit & added a counter, and updated the readme.

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -15,7 +15,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Ziko's little Happy Feed.</title>
+    <title>Project Seven: Ziko's (Happy) Feed.</title>
+    <meta name="desciption" content="Technigo Week 11: Happy Thoughts. Seventh individual project: A component's life cycle and how to react to that.">
   </head>
 
   <body>
