--- a/code/public/index.html
+++ b/code/public/index.html
@@ -7,7 +7,7 @@
 			href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Trispace&display=swap"
 			rel="stylesheet"
 		/>
-		<link rel="icon" href="../src/images/red-heart.png" />
+
 		<meta name="description" content="Share your happy thoughts" />
 		<!-- Facebook Meta Tags -->
 		<meta
@@ -15,10 +15,13 @@
 			content="https://mt-dotse-happy-thoughts.netlify.app/"
 		/>
 		<meta property="og:type" content="website" />
-		<meta property="og:title" content="Happy Thoughts" />
+		<meta
+			property="og:title"
+			content="Happy Thoughts - Technigo project by Madelene Trang"
+		/>
 		<meta
 			property="og:description"
-			content="A happy place on the internet, share your Happy Thoughts"
+			content="A happy place on the internet built with React. Share your happy thoughts!"
 		/>
 		<meta
 			property="og:image"
@@ -39,7 +42,10 @@
 			name="twitter:title"
 			content="Happy Thoughts - Technigo project by Madelene Trang"
 		/>
-		<meta name="twitter:description" content="Share your happy thoughts" />
+		<meta
+			name="twitter:description"
+			content="A happy place on the internet built with React. Share your happy thoughts!"
+		/>
 		<meta
 			name="twitter:image"
 			content="https://mt-dotse-happy-thoughts.netlify.app/assets/og-img.jpg"
