added a favicon and resized the background image

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -8,6 +8,7 @@
 			rel="stylesheet"
 		/>
 
+		<link rel="Icon" href="./assets/red-heart.png" />
 		<meta name="description" content="Share your happy thoughts" />
 		<!-- Facebook Meta Tags -->
 		<meta
