changed the styling for like button, and hearts API

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <!-- HTML Meta Tags -->
-    <title>Sofias happy thouhts</title>
+    <title>Sofias happy thoughts</title>
     <meta
       name="description"
       content="A website where you can send and read others happy thoughts"
