fixed deploy errors

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -35,7 +35,7 @@
       content="https://my-happy-thoughts-place.netlify.app/"
     />
     <meta property="twitter:url"
-    content="https://my-happy-thoughts-place.netlify.app/ />
+    content="https://my-happy-thoughts-place.netlify.app/assets/screenshot.png">
     <meta
       name="twitter:title"
       content="Happy Thoughts - Technigo project by Fatima Gamero Romero"
