changed image from directory

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -25,7 +25,7 @@
     />
     <meta
       property="og:image"
-      content="https://my-happy-thoughts-place.netlify.app/assets/screenshot.png"
+      content="https://my-happy-thoughts-place.netlify.app/image/screenshot.png"
     />
 
     <!-- Twitter Meta Tags -->
@@ -46,7 +46,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://my-happy-thoughts-place.netlify.app/assets/screenshot.png"
+      content="https://my-happy-thoughts-place.netlify.app/image/screenshot.png"
     />
     <title>Happy Thoughts</title>
   </head>
