--- a/code/public/index.html
+++ b/code/public/index.html
@@ -12,7 +12,7 @@
     <!-- Facebook Meta Tags -->
     <meta
       property="og:url"
-      content="https://my-happy-thoughts-place.netlify.app/"
+      content="https://my-happy-thoughts-place.netlify.app"
     />
     <meta property="og:type" content="website" />
     <meta
